# OOP-4-LAB

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h  scalar.h
tests/: tests.cpp
